# my_shop

./: .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml
my_shop/: asgi.py  settings.py  urls.py  wsgi.py
